--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,15 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="assets/css/room.css" type="text/css" /> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/png" href="/favicon.png"> -->
+
+    <!-- Main Quill library -->
+    <script src="//cdn.quilljs.com/1.3.6/quill.min.js"></script>
+
+    <!-- Theme included stylesheet (choose one) -->
+    <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+
+    <!-- include summernote css/js -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+
     <title>Telepati</title>
     <style>
         * {
             padding: 0;
             margin: 0;
+        }
+
+        ::-webkit-scrollbar-track {
+            -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+            background-color: #F5F5F5;
+        }
+
+        ::-webkit-scrollbar {
+            width: 6px;
+            background-color: #F5F5F5;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background-color: #000000;
         }
 
         .full-container {
@@ -108,6 +135,7 @@
         #main-content {
             width: 70%;
             height: 100%;
+            overflow-x: hidden;
         }
 
         #side-bar-menu {
@@ -148,6 +176,28 @@
         .participant-tables {
             background-color: #fff;
         }
+
+        #detail-meetings>details>div>div {
+            margin-top: 22px;
+            margin-bottom: 22px;
+        }
+
+        .document-ajb {
+            margin-top: 30px;
+        }
+
+        .summernote {
+            background-color: #fff;
+            height: 300px;
+        }
+
+        summary {
+            cursor: pointer;
+        }
+
+        table {
+            text-align: left;
+        }
     </style>
 </head>
 
@@ -157,8 +207,11 @@
             <img class="icons-meet" src="/assets/pictures/icons-meeting.png" />
             <section id="side-bar">
                 <section id="side-bar-menu">
-                    <p id="available-meetings-option" class="menus">Available Meetings</p>
+                    <p id="available-meetings-option" style="background-color: #9EB8D9;" class="menus">Available
+                        Meetings</p>
                     <p id="detail-meetings-option" class="menus">Detail Meetings</p>
+                    <p id="transaction-history-option" class="menus">Transaction History</p>
+                    <p id="logout-option" class="menus">Logout</p>
                 </section>
             </section>
             <section id="main-content">
@@ -167,9 +220,9 @@
                     <table class="table table-striped table-meeting" id="rooms-table" style="display: none;">
                         <thead>
                             <tr>
-                                <th scope="col" style="width: 20%;">No</th>
-                                <th scope="col" style="width: 20%;">Name</th>
-                                <th scope="col" style="width: 60%;">Participants</th>
+                                <th scope="col" style="width: 5%;">No</th>
+                                <th scope="col" style="width: 25%;">Name</th>
+                                <th scope="col" style="width: 70%;">Participants</th>
                             </tr>
                         </thead>
                         <tbody id="rooms-table-body">
@@ -181,9 +234,36 @@
                 </div>
                 <div id="detail-meetings" style="display: none;">
                     <p>Detail Meetings</p>
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th style="width: 20px;">No</th>
+                                <th>Meeting</th>
+                            </tr>
+                        </thead>
+                        <tbody id="table-details">
+                        </tbody>
+                    </table>
+                </div>
+                <div id="transaction-history" style="display: none;">
+                    <p>Transaction History</p>
+                    <div id="summernote"></div>
+                    <button onclick="submitSummernoteContent()">Submit</button>
                 </div>
             </section>
         </div>
+        <script>
+            $('#summernote').summernote({
+                placeholder: 'Your Tata Tertib Template',
+                tabsize: 2,
+                height: 300
+            });
+
+            function submitSummernoteContent() {
+                let content = $('#summernote').summernote('code');
+                console.log(content);
+            }
+        </script>
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
         <script src="/javascript/home/home.js"></script>
 </body>
