--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,6 +22,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
     <title>Telepati</title>
     <style>
@@ -257,6 +258,7 @@
                         <tbody id="table-details">
                         </tbody>
                     </table>
+                    <section id="dummy-canvas"></section>
                 </div>
                 <div id="transaction-history" style="display: none;">
                     <p>Transaction History</p>
