--- a/views/room.ejs
+++ b/views/room.ejs
@@ -11,6 +11,12 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="/favicon.png">
     <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.7.570/build/pdf.min.js"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+    <!-- Include dompurify from a CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@2.3.4/dist/purify.js"></script>
+
+
     <!-- <script src="https://www.jsdelivr.com/package/npm/pdfjs-dist"></script> -->
     <title>Telepati</title>
     <style>
@@ -19,13 +25,29 @@
             padding: 0;
         }
 
+        html {
+            font-size: 1vw;
+        }
+
+        #tata-tertib > ol > li > p {
+            font-size: 1rem;
+        }
+
+        #tata-tertib > h3 {
+            font-size: 2rem;
+        }
+
+        #tata-tertib > #template-room > p {
+            font-size: 1rem;
+        }
+
         ::-webkit-scrollbar-track {
-            -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+            -webkit-box-shadow: inset 0 0 0.5rem rgba(0, 0, 0, 0.3);
             background-color: #F5F5F5;
         }
 
         ::-webkit-scrollbar {
-            width: 6px;
+            width: 0.5rem;
             background-color: #F5F5F5;
         }
 
@@ -119,10 +141,10 @@
             background-color: #fff;
             overflow-y: hidden;
             overflow-x: hidden;
+            padding: 0.8rem;
         }
 
         #pdf-container {
-            width: 95%;
             height: 95%;
             display: flex;
             justify-content: center;
@@ -133,11 +155,11 @@
         #pdf-document {
             width: 100%;
             height: 100%;
-            padding: 20px;
+            padding: 1rem;
         }
 
         #pdf-controller {
-            margin: 10px;
+            margin: 1.5rem;
             width: 100%;
             text-align: center;
             display: flex;
@@ -147,7 +169,9 @@
         }
 
         #tata-tertib {
-            padding: 20px;
+            padding: 1rem;
+            width: 100%;
+            height: 100%;
         }
 
         #user-bar {
@@ -993,6 +1017,16 @@
         .square-button {
             background-color: red;
         }
+
+        #template-room {
+            width: 100%;
+            padding: 10px;
+            /* Optional: Add padding to the content */
+        }
+
+        #template-room-canvas {
+            width: 100% !important;
+        }
     </style>
 </head>
 
@@ -1025,11 +1059,53 @@
             <div id="audio-collection"></div>
             <div id="side-bar-container">
                 <section id="tata-tertib">
-                    <h1>Tata Tertib Transaksi Jual Beli</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum aut similique architecto
-                        totam, dolor minus et temporibus. Voluptas molestiae, dolore modi delectus praesentium dicta
-                        laudantium consequuntur temporibus odit accusantium cupiditate.</p>
+                    <h3> Berikut adalah beberapa tata tertib dalam mengikuti meeting online transaksi jual beli:
+                    </h3>
+                    <ol>
+                        <li>
+                            <p>Seluruh peserta transaksi dalam keadaan sehat jasmani dan rohani.</p>
+                        </li>
+                        <li>
+                            <p>Seluruh peserta sedang tidak dalam suatu ancaman atau paksaan dari pihak manapun.
+                            </p>
+                        </li>
+                        <li>
+                            <p>Pastikan untuk masuk ke virtual meeting tepat pada waktu yang ditentukan.</p>
+                        </li>
+                        <li>
+                            <p>Pastikan untuk menggunakan perangkat yang memadai, seperti komputer atau laptop
+                                dengan koneksi internet yang stabil.</p>
+                        </li>
+                        <li>
+                            <p>Non-aktifkan suara dan microphone Anda ketika tidak sedang berbicara agar tidak
+                                mengganggu pertemuan.
+                            </p>
+                        </li>
+                        <li>
+                            <p>Gunakan kamera untuk memastikan bahwa pemimpin rapat dapat melihat Anda dan
+                                mengevaluasi partisipasi Anda.</p>
+                        </li>
+                        <li>
+                            <p>Fokuslah pada rapat dan hindari melakukan kegiatan lain seperti membuka email
+                                atau menjelajahi internet.</p>
+                        </li>
+                        <li>
+                            <p>Berpartisipasilah aktif dalam diskusi dan memberikan masukan yang berguna.</p>
+                        </li>
+                        <li>
+                            <p>Durasi transaksi hanya 45 menit, jika transaksi belum selesai harus diulang
+                                kembali.</p>
+                        </li>
+                        <li>
+                            <p>Gunakan fitur chat untuk mengirimkan pertanyaan atau komentar secara real-time.
+                            </p>
+                        </li>
+                    </ol>
+                    <p>Dengan mengikuti tata tertib ini, Anda dapat memastikan bahwa meeting online berjalan
+                        dengan lancar dan produktif.</p>
+                    <br>
                     <div id="template-room"></div>
+                    <!-- <canvas id="template-room-canvas"></canvas> -->
                 </section>
                 <section id="pdf-document" class="hide-event">
                     <div id="pdf-controller">
@@ -1057,6 +1133,8 @@
         let parsedData = JSON.parse(participantData);
         let templateTataTertibData = `<%- JSON.stringify(templateTataTertib) %>`
         let templateTataTertib = templateTataTertibData.slice(1, -1)
+        // let templateTataTertibImageData = `<%- JSON.stringify(templateTataTertibImage) %>`
+        // let templateTataTertibImage = templateTataTertibImageData.slice(1, -1)
         // console.log(templateTataTertibJson)
         // let templateTataTertib = JSON.parse(templateTataTertibJson);
     </script>
