--- a/views/room.ejs
+++ b/views/room.ejs
@@ -207,6 +207,7 @@
             left: 0;
             padding: 5px;
             font-size: 7px;
+            background-color: white;
         }
 
         /* Main Content */
