adding password in sign in documents

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -674,15 +674,15 @@
                         <h5 class="modal-title" id="sign-password-label">Sign Document</h5>
                     </div>
                     <div class="modal-body">
-                        <!-- <form id="sign-document">
+                        <!-- <form id="sign-document"> -->
                             <div class="form-group">
                                 <label for="recipient-name" class="col-form-label">Password</label>
-                                <input type="password" class="form-control" id="recipient-name">
+                                <input type="password" class="form-control" id="sign-document-password">
                                 <br />
-                                <button type="submit" class="btn btn-primary">Sign Documents</button>
+                                <button id="close-sign-button" class="btn btn-danger">Cancel</button>
+                                <button id="confirm-sign-button" class="btn btn-primary">Sign Document</button>
                             </div>
-                        </form> -->
-                        <button id="confirm-sign-button" class="btn btn-primary">Sign Document</button>
+                        <!-- </form> -->
                     </div>
                 </div>
             </div>
