first commit for fr

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -111,17 +112,36 @@
             justify-content: center;
             align-items: center;
         }
+
+        .loading {
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.222);
+            position: absolute;
+            z-index: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .loading-hide {
+            display: none;
+        }
     </style>
 </head>
 
 <body>
     <div class="full-container">
+        <div class="loading" id="loading-id">
+            <img src="/assets/pictures/loader.svg" alt="loader" />
+        </div>
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog modal-dialog-custom" role="document">
                 <div class="modal-content">
                     <div id="snapshot" style="display: none;"></div>
                     <img id="image--output" alt="verifikasi wajah" class="mw-100 my-3">
+                    <canvas id="canvas-element" style="display: none;"></canvas>
                 </div>
             </div>
         </div>
@@ -144,14 +164,18 @@
         </div>
         <div class="camera-container" id="camera-container-id">
             <div class="camera-box" id="camera-box-id">
-                <video id="local-video" poster="/assets/pictures/ZKZg.gif" preload="auto" autoplay class="user-video"
-                    muted></video>
+                <video id="local-video" poster="/assets/pictures/spinner.svg" preload="auto" autoplay class="user-video"
+                    muted>
+                </video>
+                <canvas id="face-matcher-box" style="position: absolute;"></canvas>
+                <!-- <img src="/assets/pictures/face-match-box.png" style="position: absolute;" /> -->
                 <div class="face-recognition" id="face-recognition-id"></div>
             </div>
             <div class="capture-box">
-                <button class="btn btn-primary" id="capture-button-id">Capture</button>
-                <button disabled type="button" id="preview-button-id" class="btn btn-primary"
-                    data-toggle="modal" data-target="#exampleModal">
+                <!-- <button class="btn btn-primary" id="capture-button-id">Capture</button> -->
+                <button class="btn btn-primary" id="recapture-button-id" disabled>Retake Photo</button>
+                <button disabled type="button" id="preview-button-id" class="btn btn-primary" data-toggle="modal"
+                    data-target="#exampleModal">
                     Preview
                 </button>
                 <button disabled class="btn btn-primary" id="confirm-button-id">Confirm</button>
@@ -159,6 +183,7 @@
         </div>
     </div>
     <script src="/javascript/room/face-api/face-api.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
