--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="/favicon.png">
@@ -71,8 +72,11 @@
             margin: 10px;
             height: 80%;
             width: 100%;
-            position: relative;
             background-color: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
         }
 
         .user-video {
@@ -119,35 +123,60 @@
             justify-content: center;
             align-items: center;
         }
+
+        .face-recognition {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+
+        .loading {
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.222);
+            position: absolute;
+            z-index: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .loading-hide {
+            display: none;
+        }
+
+        .picture {
+            max-width: 100%;
+            max-height: 100%;
+        }
+
+        .hide-element {
+            display: none;
+        }
     </style>
 </head>
 
 <body>
     <div class="full-container">
-
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-custom" role="document">
-                <div class="modal-content">
-                    <canvas id="canvas-element" style="display:none;"></canvas>
-                    <canvas id="canvas-element-2" style="display:none;"></canvas>
-                    <img id="image--output" alt="verifikasi wajah" class="mw-100 my-3">
-                    <img id="image--output--2" style="display: none;" alt="verifikasi wajah" class="mw-100 my-3">
-                </div>
-            </div>
+        <div class="loading" id="loading-id">
+            <img src="/assets/pictures/loader.svg" alt="loader" />
         </div>
         <section class="content-container">
             <div id="video-container">
                 <div class="user-video-container">
-                    <video id="local-video" poster="/assets/pictures/ZKZg.gif" preload="auto" autoplay
+                    <canvas id="canvas-element" style="display:none;"></canvas>
+                    <img class="hide-element" alt="user-picture" id="user-picture-id"/>
+                    <video id="local-video" poster="/assets/pictures/spinner.svg" preload="auto" autoplay
                         class="user-video" muted></video>
+                    <canvas id="face-matcher-box" style="position: absolute;"></canvas>
+                    <div class="face-recognition" id="face-recognition-id"></div>
                 </div>
                 <div class="button-container">
-                    <button class="btn btn-primary" id="capture-button-id">Capture</button>
-                    <button type="button" id="preview-button-id" disabled class="btn btn-primary"
-                        data-toggle="modal" data-target="#exampleModal">
-                        Preview
-                    </button>
+                    <button class="btn btn-primary" id="recapture-button-id" disabled>Retake Photo</button>
                 </div>
             </div>
             <form id="join-room" class="join-form">
@@ -159,6 +188,7 @@
         </section>
     </div>
     <script src="/javascript/room/face-api/face-api.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
