--- a/views/room.ejs
+++ b/views/room.ejs
@@ -1483,6 +1483,21 @@
             justify-content: center;
             z-index: 1;
         }
+
+        .loading {
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.222);
+            position: absolute;
+            z-index: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .loading-hide {
+            display: none;
+        }
     </style>
 </head>
 
@@ -1490,6 +1505,9 @@
     <div id="full-container">
         <section id="new-user-join-notification-container">
         </section>
+        <div class="loading" id="loading-id">
+            <img src="/assets/pictures/loader.svg" alt="loader" />
+        </div>
         <span id="alert-error"></span>
         <section id="upper-container">
             <div id="audio-collection"></div>
