add rename user and subtitle realtime

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -1700,6 +1700,10 @@
                         <li id="record-video" class="option-menus-font-size">Record Video</li>
                         <li id="video-quality" class="option-menus-font-size">Video Quality</li>
                         <li id="display-cc" class="option-menus-font-size">Hide CC</li>
+                        <li id="rename" class="option-menus-font-size" style="display: flex; align-items: center;">
+                            Rename: &nbsp;<span><input id="rename-input"
+                                    style="max-width: 100px; background-color: transparent; border: none; color: white;"
+                                    type="text" />&nbsp;<i id="submit-rename" class="fas fa-edit fa-lg"></i></span></li>
                     </ul>
                 </div>
                 <span id="option-button-tooltip">Settings</span>
