--- a/views/room.ejs
+++ b/views/room.ejs
@@ -902,7 +902,7 @@
         #screen-sharing-container {
             min-width: 100%;
             max-width: 100%;
-            height: 100%;
+            height: 90%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -1547,11 +1547,12 @@
             bottom: 0;
             left: 50%;
             transform: translateX(-50%);
-            z-index: 1;
+            z-index: 2;
             width: 80%;
             min-height: 50px;
             height: 50px;
             background-color: #0000006a;
+            transition: 1s;
         }
 
         .text-to-speech-hide {
