--- a/views/room.ejs
+++ b/views/room.ejs
@@ -62,7 +62,7 @@
         #upper-container {
             width: 100%;
             height: 90%;
-            /* background-color: green; */
+            background-color: #0B0D0F;
             position: relative;
             display: flex;
         }
@@ -74,6 +74,7 @@
             justify-content: center;
             align-items: center;
             position: relative;
+            background-color: #15181E;
         }
 
         #video-container {
@@ -178,88 +179,90 @@
             position: relative;
             transition: 1s;
             border: 1px solid white;
+            border-radius: 10px;
+            overflow: hidden;
         }
 
         .user-video-container-1 {
-            height: 80%;
-            margin: 10px;
-            width: 80%;
+            height: 99%;
+            padding: 5px;
+            width: 99%;
             transition: 1s;
         }
 
         .user-video-container-2 {
-            height: 80%;
-            margin: 10px;
-            width: 40%;
+            height: 100%;
+            padding: 5px;
+            width: 50%;
             transition: 1s;
         }
 
         .user-video-container-3 {
-            height: 40%;
-            margin: 10px;
-            width: 40%;
+            height: 50%;
+            padding: 5px;
+            width: 50%;
             transition: 1s;
         }
 
         .user-video-container-4 {
-            height: 40%;
-            margin: 10px;
-            width: 40%;
+            height: 50%;
+            padding: 5px;
+            width: 50%;
             transition: 1s;
         }
 
         .user-video-container-5 {
-            height: 40%;
-            margin: 10px;
-            width: 30%;
+            height: 33%;
+            padding: 5px;
+            width: 50%;
             transition: 1s;
         }
 
         .user-video-container-6 {
-            height: 40%;
-            margin: 10px;
-            width: 30%;
+            height: 33%;
+            padding: 5px;
+            width: 50%;
             transition: 1s;
         }
 
         .user-video-container-7 {
             height: 30%;
-            margin: 10px;
+            padding: 5px;
             width: 30%;
             transition: 1s;
         }
 
         .user-video-container-8 {
             height: 30%;
-            margin: 10px;
+            padding: 5px;
             width: 30%;
             transition: 1s;
         }
 
         .user-video-container-9 {
             height: 30%;
-            margin: 10px;
+            padding: 5px;
             width: 30%;
             transition: 1s;
         }
 
         .user-video-container-10 {
             height: 30%;
-            margin: 10px;
+            padding: 5px;
             width: 22%;
             transition: 1s;
         }
 
         .user-video-container-11 {
             height: 30%;
-            margin: 10px;
+            padding: 5px;
             width: 22%;
             transition: 1s;
         }
 
         .user-video-container-12 {
             height: 30%;
-            margin: 10px;
+            padding: 5px;
             width: 22%;
             transition: 1s;
         }
@@ -279,11 +282,12 @@
             position: relative;
             width: 40px;
             height: 40px;
-            border-radius: 50%;
+            /* border-radius: 50%; */
             transition: 0.3s;
-            background: #44474A;
+            background: #15181E;
             margin-left: 10px;
             margin-right: 10px;
+            border: 1px solid #2F3640;
         }
 
         .button-small-custom:hover {
@@ -297,8 +301,8 @@
             position: relative;
             width: 40px;
             height: 40px;
-            border-radius: 50%;
-            background: #fc5d5b;
+            /* border-radius: 50%; */
+            background: #CB2233;
             transition: 0.3s;
             margin-left: 10px;
             margin-right: 10px;
@@ -888,7 +892,7 @@
             position: relative;
             width: 40px;
             height: 40px;
-            border-radius: 50%;
+            /* border-radius: 50%; */
             transition: 0.3s;
             background: #00ff11b2;
             margin-left: 10px;
@@ -993,8 +997,8 @@
         }
 
         .user-list-microphone {
-            border-radius: 50%;
-            background-color: #44474A;
+            /* border-radius: 50%;
+            background-color: #44474A; */
             padding: 5px;
             margin: 5px;
             aspect-ratio: 1;
@@ -1005,8 +1009,8 @@
         }
 
         .user-list-camera {
-            border-radius: 50%;
-            background-color: #44474A;
+            /* border-radius: 50%;
+            background-color: #44474A; */
             padding: 5px;
             margin: 5px;
             aspect-ratio: 1;
@@ -1482,6 +1486,13 @@
             display: flex;
             justify-content: center;
             z-index: 1;
+            align-items: center;
+        }
+
+        .face-recognition>canvas {
+            max-width: 100%;
+            width: 100%;
+            max-height: 100%;
         }
 
         .loading {
